--- a/views/home.html
+++ b/views/home.html
@@ -112,7 +112,7 @@
 
 </style>
 <body class="theme-dark-premium">
-
+<div id="toastContainer"></div>
 <header class="brandbar">
   <span class="brand-title">NEW DELI</span>
   <div class="brandbar-right">
@@ -182,6 +182,7 @@
   </div>
 
   <p class="footer-tip">💡 שמרו את האתר במסך הבית כדי להשתמש בו כאפליקציה!</p>
+
 </div>
 
 <script src="/js/global.js"></script>
