--- a/views/index.html
+++ b/views/index.html
@@ -10,7 +10,7 @@
 <script src="https://unpkg.com/lucide@latest"></script>
 <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;700&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="/css/style.css?v=2">
+  <link rel="stylesheet" href="/css/style.css">
   
   <script defer src="/js/ui.js"></script>
 </head>
@@ -27,9 +27,6 @@
     <span class="burger" id="burger">&#9776;</span>
   </div>
 </header>
-
-
-
 <nav class="mobile-nav" id="mobileNav">
   <button id="closeNav" class="close-btn">✖</button>
   <ul>
