--- a/views/manage.html
+++ b/views/manage.html
@@ -70,7 +70,7 @@
   <br>
   <div class="controls-row">
     <input type="text" id="runtimeNoteText" placeholder="לדוגמה: נגמר החומר של הפלטה">
-    <button type="button" id="addRuntimeNoteBtn" style="color: black;">➕</button>
+    <button type="button" id="addRuntimeNoteBtn" style="color: black; margin-top: 10px;">➕</button>
   </div>
 
 
