--- a/public/css/style.css
+++ b/public/css/style.css
@@ -718,6 +718,7 @@ th, td {
   border-radius: 12px;
   padding: 16px;
   margin-top: 20px;
+      max-width: 600px;
   box-shadow: 0 2px 6px rgba(0,0,0,0.3);
 }
 
