--- a/views/manage.html
+++ b/views/manage.html
@@ -79,7 +79,7 @@
     <p id="managerNote"></p>
   </section>
 </section>
-      <div style="display:flex;gap:10px;flex-wrap:wrap;margin-top:10px">
+      <div style="display:flex;gap:10px;flex-wrap:wrap;margin-top:10px;justify-content: center;">
         <button id="saveUpdates" class="btn btn--accent" style="display:none;">שמור ביצועים</button>
         <button id="finalizeBtn" class="btn btn--primary" style="display:none;">סיום משמרת</button>
       </div>
