--- a/views/manage.html
+++ b/views/manage.html
@@ -53,7 +53,7 @@
       <input type="date" name="date" required>
       <button type="submit" class="btn btn--primary">טען משמרת</button>
       <button id="go-back" class="btn btn--primary">חזור אחורה</button>
-      <div class="manage_btn" style="display: flex;">
+      <div class="manage_btn" style="display: flex;justify-content: center;">
         <span id="leadChip" class="lead-chip" style="display:none;"><span class="dot"></span>אחמ״ש: —</span>
         <span id="status" class="lead-chip" style="display:none;"><span class="dot"></span>סטטוס: —</span>
       </div>
