--- a/views/invoices.html
+++ b/views/invoices.html
@@ -198,7 +198,7 @@
               צפייה בקובץ
             </a>
           </td>
-          <td data-label="פעולות" class="actions">
+          <td class="actions">
             <button onclick="delInvoice('${r._id}')" class="secondary">מחק</button>
           </td>
         </tr>
