--- a/views/invoices.html
+++ b/views/invoices.html
@@ -91,7 +91,7 @@
 
         <div class="row buttons">
           <button type="submit" class="secondary">סנן</button>
-          <button type="button" id="clearFilters" class="secondary">נקה</button>
+          <button style="margin-top: 10px;" type="button" id="clearFilters" class="secondary">נקה</button>
         </div>
       </form>
     </div>
