--- a/views/admin-login.html
+++ b/views/admin-login.html
@@ -65,10 +65,7 @@
       transition: 0.2s;
     }
 
-    input:focus {
-      border-color: #ffcb05;
-      background: #fffef4;
-    }
+
 
     button {
       width: 100%;
@@ -104,7 +101,7 @@
     <p>הקישו קוד גישה כדי להיכנס למערכת.</p>
 
     <label for="pin">קוד גישה (PIN):</label>
-    <input id="pin" name="pin" style="width: 95%;" type="password" inputmode="numeric" placeholder="••••" autocomplete="one-time-code" required />
+    <input id="pin" name="pin" type="password" inputmode="numeric" placeholder="••••" autocomplete="one-time-code" required />
 
     <button type="submit">🔓 התחברות</button><br>
       <button id="go-back" class="btn btn--primary">חזור אחורה</button>
