--- a/views/admin.html
+++ b/views/admin.html
@@ -51,7 +51,7 @@
     <h1 style="margin-top: 50px;">דף ניהול 👨‍💼</h1>
     <!-- <h1>דף מנהל – משמרות</h1> -->
 
-    <div class="admin-controls">
+    <div class="admin-controls" style="margin: auto; max-width: 75%;">
       <input type="date" id="filterDate" />
       <input type="text" id="searchName" placeholder="חפש לפי שם עובד" />
       <button type="button" id="admin-control" onclick="filterShifts()">סנן תאריך</button>
@@ -381,7 +381,7 @@
 
     window.onload = loadShifts;
   </script>
-  <div class="card">
+  <div class="card" style="max-width: 45%; margin: auto;">
   <h2>שליחת התראה</h2>
   <form id="notifForm">
     <input type="text" id="notifMessage" placeholder="כתוב הודעה להתראה..." required />
