--- a/views/admin.html
+++ b/views/admin.html
@@ -381,7 +381,7 @@
 
     window.onload = loadShifts;
   </script>
-  <div class="card" style="max-width: 45%; margin: auto;">
+  <div class="card" id="test" style="max-width: 45%; margin: auto;">
   <h2>שליחת התראה</h2>
   <form id="notifForm">
     <input type="text" id="notifMessage" placeholder="כתוב הודעה להתראה..." required />
