--- a/views/manage.html
+++ b/views/manage.html
@@ -17,6 +17,13 @@
 </head>
 
 <body class="theme-dark-premium">
+  <div id="globalLoader">
+  <div class="spinner"></div>
+  <p>טוען נתונים...</p>
+</div>
+
+<!-- התוכן שלך -->
+<div id="pageContent" style="display:none">
 <header class="brandbar">
   <span class="brand-title">NEW DELI</span>
   <div class="brandbar-right">
@@ -118,6 +125,6 @@
   <script src="/js/global.js"></script>
   <script src="/js/manage.js"></script>
 <script src="/js/ui-enhance.js" defer></script>
-
+</div>
 </body>
 </html>
