--- a/views/home.html
+++ b/views/home.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html lang="he">
+<html lang="he" dir="rtl">
+
 <head>
 <meta charset="UTF-8" />
+
 <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;700&display=swap" rel="stylesheet">
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="icon" href="/icons/icon-512.png" type="image/png">
