--- a/views/invoices.html
+++ b/views/invoices.html
@@ -20,6 +20,13 @@
   <script defer src="/js/ui.js"></script>
 </head>
 <body class="theme-dark-premium">
+  <div id="globalLoader">
+  <div class="spinner"></div>
+  <p>טוען נתונים...</p>
+</div>
+
+<!-- התוכן שלך -->
+<div id="pageContent" style="display:none">
 <header class="brandbar">
   <span class="brand-title">NEW DELI</span>
   <div class="brandbar-right">
@@ -238,5 +245,6 @@ fileInput.addEventListener('change', () => {
   </script>
   <script src="/js/global.js"></script>
 <script src="/js/ui-enhance.js" defer></script>
+</div>
 </body>
 </html>
