--- a/views/register.html
+++ b/views/register.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>הרשמה</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/css/style.css?v=2"> <!-- קישור ל־CSS ששלחת -->
   <style>
