--- a/public/css/style.css
+++ b/public/css/style.css
@@ -509,9 +509,9 @@ th, td {
    HIGHLIGHT
    ========================= */
 
-.highlight,
+.highlight
 /* tr:hover td, */
-.card:hover{
+{
   background: rgba(0, 255, 163, 0.1);
   border-color: var(--btn-primary);
   box-shadow: 0 0 12px rgba(0, 255, 163, 0.4),
